--- a/Carrito.html
+++ b/Carrito.html
@@ -65,7 +65,6 @@
 										México, CDMX
 										<br> Horas:
 										<br>martes 7:00–9:30
-										<br>miércoles 7:00–9:30
 										<br>jueves 7:00–9:30
 										<br>viernes 7:00–9:30
 										<br>sábado Cerrado
@@ -85,8 +84,8 @@
 				</ul>
 				<ul class="header-links pull-right">
 					<!--<li><a href="productregister.html"><i class="fa fa-dollar"></i>Agregar producto</a></li>
-								<li><a href="deleteproduct.html"><i class="fa fa-dollar"></i>Eliminar/Modificar producto</a></li>
-														<!-- Header Modal -->
+						<li><a href="deleteproduct.html"><i class="fa fa-dollar"></i>Eliminar/Modificar producto</a></li>
+					Header Modal -->
 					<li><a href="#deseos" class="fa fa-user-o" data-toggle="modal" id="profile"> Mi perfil</a></li>
 					<div class="modal fade" id="deseos">
 						<div class="modal_dialog">
@@ -144,10 +143,9 @@
 					<!-- SEARCH BAR -->
 					<div class="col-md-6">
 						<div class="header-search">
-							<form>
+							<form id="form">
 								<select class="input-select">
-									<option value="1">Producto: </option>
-
+									<option value="0">Productos: </option>
 								</select>
 								<input class="input" placeholder="Buscar" id="search_string">
 								<button class="search-btn" id="search-btn">Buscar</button>
@@ -177,7 +175,8 @@
 									</div>
 									<div class="cart-btns" id="wish_buttons">
 										<a id="cart_wish">Ver mis deseos</a>
-										<a href="" href="#">Ver mi carrito<i class="fa fa-arrow-circle-right"></i></a>
+										<a href="" href="#">Ver mi carrito<i
+												class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -207,7 +206,7 @@
 							</div>
 							<!-- /Cart -->
 
-
+							
 						</div>
 					</div>
 					<!-- /ACCOUNT -->
@@ -228,13 +227,10 @@
 			<div id="responsive-nav">
 				<!-- NAV -->
 				<ul class="main-nav nav navbar-nav">
-					<li class="active"><a href="index.html" href="#">Inicio</a></li>
-					<li><a href="comida.html" href="#">Comida</a></li>
-					<li><a href="electronica.html" href="#">Electrónica</a></li>
-					<li><a href="tecnologia.html" href="#">Tecnología</a></li>
-					<li><a href="juegos.html" href="#">Juegos de mesa</a></li>
-					<li><a href="papeleria.html" href="#">Papelería</a></li>
-					<li><a href="IPN.html" href="#">Espiritu IPN</a></li>
+					<li class="active"><a href="index.html">Inicio</a></li>
+					<li><a id="e">Electrónica</a></li>
+					<li><a id="t">Tecnología</a></li>
+					<li><a id="i">Espiritu IPN</a></li>
 				</ul>
 				<!-- /NAV -->
 			</div>
@@ -255,11 +251,9 @@
 
 				<!-- section title -->
 				<div class="col-md-12">
-					<div class="section-title">
-						<h3 class="title">Tus productos agregados</h3>
-
-						<br><br>
-						<a class="primary-btn3 order-submit" id="changePayment" data-toggle="modal">Proceder al pago</a>
+					<div class="section-title" style="display: flex; justify-content: space-between;">
+						<h3 class="title" id="title_cart">Tus productos agregados</h3>
+						<a href="checkout.html" class="primary-btn3 order-submit">Proceder al pago</a>
 
 					</div>
 				</div>
