--- a/electronica.html
+++ b/electronica.html
@@ -183,7 +183,7 @@
 									</div>
 									<div class="cart-btns" id="wish_buttons">
 										<a id="cart_wish">Ver mis deseos</a>
-										<a href="" href="#">Ver mi carrito<i class="fa fa-arrow-circle-right"></i></a>
+										<a href="Carrito.html">Ver mi carrito<i class="fa fa-arrow-circle-right"></i></a>
 									</div>
 								</div>
 							</div>
@@ -280,56 +280,6 @@
 				<!-- ASIDE -->
 				<div id="aside" class="col-md-3">
 					<!-- aside Widget -->
-					<div class="aside">
-						<h3 class="aside-title">Categorias</h3>
-						<div class="checkbox-filter">
-
-							<div class="input-checkbox">
-								<input type="checkbox" id="category-1">
-								<label for="category-1">
-									<span></span>
-									Circuitos integrados
-									<small>(46)</small>
-								</label>
-							</div>
-
-							<div class="input-checkbox">
-								<input type="checkbox" id="category-2">
-								<label for="category-2">
-									<span></span>
-									Componentes
-									<small>(84)</small>
-								</label>
-							</div>
-
-							<div class="input-checkbox">
-								<input type="checkbox" id="category-3">
-								<label for="category-3">
-									<span></span>
-									Tarjetas programables
-									<small>(70)</small>
-								</label>
-							</div>
-
-							<div class="input-checkbox">
-								<input type="checkbox" id="category-4">
-								<label for="category-4">
-									<span></span>
-									Motores
-									<small>(10)</small>
-								</label>
-							</div>
-							<div class="input-checkbox">
-								<input type="checkbox" id="category-5">
-								<label for="category-5">
-									<span></span>
-									Paquetes
-									<small>(10)</small>
-								</label>
-							</div>
-						</div>
-					</div>
-					<!-- /aside Widget -->
 
 					<!-- aside Widget -->
 					<div class="aside">
@@ -352,59 +302,6 @@
 					<!-- /aside Widget -->
 
 					<!-- aside Widget -->
-					<div class="aside">
-						<h3 class="aside-title">Marcas</h3>
-						<div class="checkbox-filter">
-							<div class="input-checkbox">
-								<input type="checkbox" id="brand-1">
-								<label for="brand-1">
-									<span></span>
-									AMI
-									<small>(130)</small>
-								</label>
-							</div>
-							<div class="input-checkbox">
-								<input type="checkbox" id="brand-2">
-								<label for="brand-2">
-									<span></span>
-									ATMEL
-									<small>(20)</small>
-								</label>
-							</div>
-							<div class="input-checkbox">
-								<input type="checkbox" id="brand-3">
-								<label for="brand-3">
-									<span></span>
-									IBM
-									<small>(50)</small>
-								</label>
-							</div>
-							<div class="input-checkbox">
-								<input type="checkbox" id="brand-4">
-								<label for="brand-4">
-									<span></span>
-									IM
-									<small>(10)</small>
-								</label>
-							</div>
-							<div class="input-checkbox">
-								<input type="checkbox" id="brand-5">
-								<label for="brand-5">
-									<span></span>
-									STM
-									<small>(3)</small>
-								</label>
-							</div>
-							<div class="input-checkbox">
-								<input type="checkbox" id="brand-6">
-								<label for="brand-6">
-									<span></span>
-									Toshiba
-									<small>(7)</small>
-								</label>
-							</div>
-						</div>
-					</div>
 					<!-- /aside Widget -->
 
 					<!-- aside Widget -->
