--- a/Wishlist.html
+++ b/Wishlist.html
@@ -255,7 +255,7 @@
 
 				<!-- section title -->
 				<div class="col-md-12">
-					<div class="section-title">
+					<div class="section-title" style="display: flex; justify-content: space-between;">
 						<h3 class="title">Tus productos agregados</h3>
 
 						<br><br>
