--- a/producto.html
+++ b/producto.html
@@ -32,6 +32,7 @@
 	<script src="./js/product.js"></script>
 	<script src="./js/cart.js"></script>
 	<script src="./js/productDetail.js"></script>
+	<script src="./js/index-search.js"></script>
 	<script src="./js/wish.js"></script>
 
 	<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -179,7 +180,7 @@
 
 									<div class="cart-summary" id="wish-summary">
 										<small id="qty-total-wish">0 Articulos</small>
-										<h5 id="subtotal-wish">SUBTOTAL: $1,340.00</h5>
+										<h5 id="subtotal-wish">SUBTOTAL: $0.00</h5>
 									</div>
 									<div class="cart-btns" id="wish_buttons">
 										<a id="cart_wish">Ver mis deseos</a>
