--- a/Carrito.html
+++ b/Carrito.html
@@ -251,6 +251,7 @@
 
 				<!-- section title -->
 				<div class="col-md-12">
+					<button class="delete"><i class="fa fa-close"></i></button>
 					<div class="section-title" style="display: flex; justify-content: space-between;">
 						<h3 class="title" id="title_cart">Tus productos agregados</h3>
 						<a href="checkout.html" class="primary-btn3 order-submit">Proceder al pago</a>
