--- a/Gestiondir.html
+++ b/Gestiondir.html
@@ -297,8 +297,10 @@
 							<br><br>
 							<div class="perfil-usuario-body">
 								<div class="direcciones">
+									<button class="delete2"><i class="fa fa-close"></i></button>
+									<br>
 
-									<h3 class="titulo">Dirección uno</h3>
+									<h3 class="titulo">    <br>   Dirección uno</h3>
 									<br>
 									<ul class="lista-datos">
 										<li><i class="fa fa-angle-right"></i> Calle:</li>
@@ -322,7 +324,7 @@
 								<br><br>
 
 								<div class="direcciones">
-
+									<button class="delete2"><i class="fa fa-close"></i></button>
 									<h3 class="titulo">Dirección dos</h3>
 									<br>
 									<ul class="lista-datos">
