--- a/producto.html
+++ b/producto.html
@@ -352,7 +352,7 @@
 
 						<ul class="product-btns">
 							<!-- Header Modal -->
-							<!--<li><a href="#deseos2" class="fa fa-heart-o" data-toggle="modal">Agregar a deseos </a></li>-->
+							<li><a id="add-to-wish" href="#deseos2" class="fa fa-heart-o" data-toggle="modal">Agregar a deseos </a></li>
 							<div class="modal fade" id="deseos2">
 								<div class="modal_dialog">
 									<div class="modal-content">
