--- a/Managepay.html
+++ b/Managepay.html
@@ -31,7 +31,7 @@
 	<script src="./js/index-search.js"></script>
 	<script src="./js/cart.js"></script>
 	<script src="./js/wish.js"></script>
-	<script src="./js/paymentList.js"></script>
+	<script src="./js/paymentListFull.js"></script>
 	<script src="./js/paymentMethod.js"></script>
 
 
