--- a/producto.html
+++ b/producto.html
@@ -227,27 +227,6 @@
 	<!-- /HEADER -->
 
 	<!-- NAVIGATION -->
-	<nav id="navigation">
-		<!-- container -->
-		<div class="container">
-			<!-- responsive-nav -->
-			<div id="responsive-nav">
-				<!-- NAV -->
-				<ul class="main-nav nav navbar-nav">
-					<li class="active"><a href="index.html" href="#">Inicio</a></li>
-					<li><a href="comida.html" href="#">Comida</a></li>
-					<li><a href="electronica.html" href="#">Electrónica</a></li>
-					<li><a href="tecnologia.html" href="#">Tecnología</a></li>
-					<li><a href="juegos.html" href="#">Juegos de mesa</a></li>
-					<li><a href="papeleria.html" href="#">Papelería</a></li>
-					<li><a href="IPN.html" href="#">Espiritu IPN</a></li>
-				</ul>
-				<!-- /NAV -->
-			</div>
-			<!-- /responsive-nav -->
-		</div>
-		<!-- /container -->
-	</nav>
 	<!-- /NAVIGATION -->
 
 	<!-- BREADCRUMB -->
@@ -352,19 +331,19 @@
 
 						<ul class="product-btns">
 							<!-- Header Modal -->
-							<li><a id="add-to-wish" href="#deseos2" class="fa fa-heart-o" data-toggle="modal">Agregar a deseos </a></li>
+							<li><a href="#deseos2" id="add-to-wish" class="fa fa-heart-o" data-toggle="modal">Agregar a deseos </a></li>
 							<div class="modal fade" id="deseos2">
 								<div class="modal_dialog">
 									<div class="modal-content">
 										<div class="modal-header">
 											<button tyle="button" class="close" data-dismiss="modal"
 												aria-hidden="true">&times;</button>
-											<h4 class="modal-title">Confirmación
+											<h4 class="modal-title" id="title_wish">Confirmación
 											</h4>
 										</div>
 										<!-- Header Body -->
 										<div class="modal-body">
-											<p>
+											<p id="copy_wish"> 
 												<br>
 												Se ha agregado correctamente. Gracias por ser cool y hacerte notar.
 												</br>
